work in progress..

--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-Hello World!!!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Who is Ole?</title>
+    <link rel="stylesheet" href="assets/css/index.css">
+</head>
+<body>
+    <header>
+        <h1>Ole Kristian Westby</h1>
+        <h2>Developer & Fisherman </h2>
+    </header>
+
+    <section id="about-me">
+        <h2>About Me</h2>
+        <p>I'm 22 years old, based in Bergen. Currently studying for a Bachelor in Cybersecurity while working part time for UNICEF Norway.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Languages & Tools</h2>
+        <h4>Python, Javascript, HTML, CSS, php, Haskell, Java, MySQL.</h4>
+        <h4>OpenAI, GPT3.5/4.0, Sklearn, discord.py, PyTesseract, googletrans, matplotlib, and more! </h4>
+    </section>
+
+    <section id="projects">
+        <h2>Personal Projects</h2>
+
+        <h3><a href="projects/spamdetector.html">Spam Detector</a></h3>
+        <p>Python, Javascript, HTML, CSS, OpenAI & PyTesseract.</p>
+        <p>Have an AI-model analyze emails to determine the legitimacy of the email!</p>
+
+        <br></br>
+
+        <h3><a href="projects/summarizer.html">PDF Summarizer</a></h3>
+        <p>Python, Javascript, HTML, CSS, OpenAI.</p>
+        <p>Have an AI-model summarize a PDF for you!</p>
+
+        <br></br>
+
+        <h3><a href="projects/coolbot.html">Coolbot</a></h3>
+        <p>Python, discord.py, OpenAI, Reddit api, googletrans..</p>
+        <p>Discord bot made for my friends and I.</p>
+    </section>
+
+    <section id="work-experience">
+        <h2>Work Experience</h2>
+
+        <div>
+            <h3>Fundraiser @ UNICEF Norway | August 2023 - PRESENT</h3>
+            <p>Job description and responsibilities.</p>
+        </div>
+
+        <div>
+            <h3>Interim Team Leader @ UNICEF Norway | July 2023</h3>
+            <p>Job description and responsibilities.</p>
+        </div>
+
+        <div>
+            <h3>Fundraiser @ UNICEF Norway | July 2022 - June 2023</h3>
+            <p>Job description and responsibilities.</p>
+        </div>
+
+        <div>
+            <h3>Fundraiser @ UNICEF Norway | June 2020 - September 2021</h3>
+            <p>Job description and responsibilities.</p>
+        </div>
+
+        <div>
+            <h3>Utplassering @ Austefjorden Smolt AS / Blomsea | 2015</h3>
+            <p>Job description and responsibilities.</p>
+        </div>
+    </section>
+
+    <!-- Contact Me Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Details on how to contact you.</p>
+    </section>
+
+    <script src="assets/js/index.js"></script>
+</body>
+</html>
