work in progress..

--- a/index.html
+++ b/index.html
@@ -73,10 +73,8 @@
         </div>
     </section>
 
-    <!-- Contact Me Section -->
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Details on how to contact you.</p>
+        <h2><a href="mailto:owe05@hotmail.no">Email</a></h2>
     </section>
 
     <script src="assets/js/index.js"></script>
