--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <h1>Ole Kristian Westby</h1>
+        <h1><p>Ole Kristian Westby<p></h1>
         <h2>Developer & Fisherman </h2>
     </header>
 
-    <section id="about-me">
+    <section id="about-me!">
         <h2>About Me</h2>
         <p>I'm 22 years old, based in Bergen. Currently studying for a Bachelor in Cybersecurity while working part time for UNICEF Norway.</p>
     </section>
