--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h2>Developer & Fisherman </h2>
     </header>
 
-    <section id="about-me!">
-        <h2>About Me</h2>
+    <section id="about-me">
+        <h2>About Me!</h2>
         <p>I'm 22 years old, based in Bergen. Currently studying for a Bachelor in Cybersecurity while working part time for UNICEF Norway.</p>
     </section>
 
