--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <br></br>
 
-        <h3><a href="projects/summarizer.html">PDF Summarizer</a></h3>
+        <h3><a href="https://summarizer.olewestby.live/">PDF Summarizer</a></h3>
         <p>Python, Javascript, HTML, CSS, OpenAI.</p>
         <p>Have an AI-model summarize a PDF for you!</p>
 
