--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="projects">
         <h2>Personal Projects</h2>
 
-        <h3><a href="projects/spamdetector.html">Spam Detector</a></h3>
+        <h3><a href="https://spamdetector.olewestby.live/">Spam Detector</a></h3>
         <p>Python, Javascript, HTML, CSS, OpenAI & PyTesseract.</p>
         <p>Have an AI-model analyze emails to determine the legitimacy of the email!</p>
 
