--- a/index.html
+++ b/index.html
@@ -74,7 +74,16 @@
     </section>
 
     <section id="contact">
-        <h2><a href="mailto:owe05@hotmail.no">Email</a></h2>
+        <h2>Contact</h2>
+        <div class="contact-item">
+            <a href="mailto:owe05@hotmail.no">Email</a>
+        </div>
+        <div class="contact-item">
+            <a href="https://github.com/owe005" target="_blank">GitHub</a>
+        </div>
+        <div class="contact-item">
+            <a href="https://www.linkedin.com/in/ole-kristian-westby-b3366b28a/" target="_blank">LinkedIn</a>
+        </div>
     </section>
 
     <script src="assets/js/index.js"></script>
