--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <br></br>
 
-        <h3><a href="projects/coolbot.html">Coolbot</a></h3>
+        <h3><a href="projects/coolbot.html">Coolbot, not ready yet..</a></h3>
         <p>Python, discord.py, OpenAI, Reddit api, googletrans..</p>
         <p>Discord bot made for my friends and I.</p>
     </section>
