big improvement, big redesign as well

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -72,35 +72,31 @@
             <h3 class="tm-text-primary mb-4 d-grey">Education</h3>
             <hr>
             <p>
-                <h4>University of Bergen</h4>
-                <h5>BS, Cybersecurity</h5>
-                <span>&emsp;Bergen, Norway <i>(August 2020 - Current)</i></span><br>
+                <h4>BSc, Cybersecurity</h4>
+                <span>&emsp;University of Bergen, <i>(August 2020 - Current)</i></span><br>
                 <span>&emsp;Grade Average: C</span>
             </p>
             <hr>
             <p>
-                <h4>Bergen Katedralskole</h4>
-                <h5>Studiespesialisering, retn. realfag. VG2, VG3 </h5>
-                <span>&emsp;Bergen, Norway <i>(Aug 2018 - Jun 2020)</i></span><br>
+                <h4>Studiespesialisering, retn. realfag. VG2, VG3 </h4>
+                <span>&emsp;Bergen Katedralskole, <i>(Aug 2018 - Jun 2020)</i></span><br>
                 <span>&emsp;VG2: Physics 1, Chemistry 1, Mathematics R1, Law 1</span><br>
                 <span>&emsp;VG3: Physics 2, Mathematics R2, Law 2</span>
             </p>
             <hr>
             <p>
-                <h4>Laksevåg Videregående Skole</h4>
-                <h5>Studiespesialisering, VG1. </h5>
-                <span>&emsp;Bergen, Norway <i>(Aug 2017 - Jun 2018)</i></span><br>
+                <h4>Studiespesialisering, VG1. </h4>
+                <span>&emsp;Laksevåg Videregående Skole, <i>(Aug 2017 - Jun 2018)</i></span><br>
             </p>
         </div>
     </div>
+    <br>
     <div class="row" style="justify-content: right;">
         <a href="../files/CV-OKW.pdf" class="resume_button" target="_blank">
             <ion-icon name="document-attach-outline" style="padding: 0px 10px 0px 0px; vertical-align: middle;"></ion-icon>Download CV
           </a>
-    </div>
-    <div class="row" style="justify-content: right;">
         <a href="../files/CV-OKWEnglish.pdf" class="resume_button" target="_blank">
-            <ion-icon name="document-attach-outline" style="padding: 0px 10px 0px 0px; vertical-align: middle;"></ion-icon>Download CV (English version)
-          </a>
+            <ion-icon name="document-attach-outline" style="padding: 0px 10px 0px 0px; vertical-align: middle;"></ion-icon>For English version
+        </a>
     </div>
 </div>
