--- a/pages/skills.html
+++ b/pages/skills.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-4" style="padding-bottom: 50px;">
             <h3 class="tm-text-primary mb-4 w">Languages</h3>
-            <hr style="border-color: #d1d1d133;">
+            <hr style="border-color: #d1d1d133;"> 
             <p>Python
                 <div class="w3-round w3-tiny skill_bar">
                     <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
@@ -20,19 +20,19 @@
 
             <p>Web (HTML,CSS,JS)
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;"></div>Expert</div>
-                </div>
-            </p>
-
-            <p>Java
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;"></div>Expert</div>
+                    <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;"></div>Expert</div>
                 </div>
             </p>
 
             <p>MySQL
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:65%;"><div style="padding-top: 1px;"></div>Proficient</div>
+                    <div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;"></div>Proficient</div>
+                </div>
+            </p>
+
+            <p>Java
+                <div class="w3-round w3-tiny skill_bar">
+                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;"></div>Proficient</div>
                 </div>
             </p>
 
@@ -44,7 +44,7 @@
 
             <p>Haskell
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;"></div>Okay</div>
+                    <div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;"></div>Novice</div>
                 </div>
             </p>
         </div>  
@@ -54,55 +54,55 @@
             <hr style="border-color: #d1d1d133;">
             <p>OpenAI
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:95%;"><div style="padding-top: 1px;">Expert</div></div>
+                    <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
                 </div>
             </p>
             
             <p>Discord
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
+                    <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div>
                 </div>
             </p>
 
             <p>Sklearn
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
+                    <div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;">Expert</div></div>
                 </div>
             </p>
 
             <p>Flask
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div>
+                    <div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;">Expert</div></div>
                 </div>
             </p>
 
             <p>Googletrans
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;">Expert</div></div>
+                    <div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;">Proficient</div></div>
                 </div>
             </p>
 
             <p>Matplotlib
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;">Expert</div></div>
+                    <div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;">Proficient</div></div>
                 </div>
             </p>
 
             <p>Pytesseract
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:65%;"><div style="padding-top: 1px;">Proficient</div></div>
+                    <div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div>
                 </div>
             </p>
 
             <p>OpenCV
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;">Okay</div></div>
+                    <div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;">Novice</div></div>
                 </div>
             </p>
 
             <p>Tensorflow
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:25%;"><div style="padding-top: 1px;">Okay</div></div>
+                    <div data-inviewport="bar-fill" style="width:25%;"><div style="padding-top: 1px;">Novice</div></div>
                 </div>
             </p>
         </div>  
@@ -110,15 +110,15 @@
         <div class="col-sm-12 col-md-4" style="padding-bottom: 50px;">
             <h3 class="tm-text-primary mb-4 w">Skills</h3>
             <hr style="border-color: #d1d1d133;">
-            <p>Communication
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:99%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
-            </p>
-
             <p>Software Development
                 <div class="w3-round w3-tiny skill_bar">
                     <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
+                </div>
+            </p>            
+
+            <p>Communication
+                <div class="w3-round w3-tiny skill_bar">
+                    <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div>
                 </div>
             </p>
 
@@ -130,19 +130,24 @@
 
             <p>Datascience
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;">Expert</div></div>
+                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;">Proficient</div></div>
                 </div>
             </p>
 
             <p>Data Visualization
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;">Proficient</div></div>
+                    <div data-inviewport="bar-fill" style="width:55%;"><div style="padding-top: 1px;">Proficient</div></div>
                 </div>
+            </p>
+
+            <p>Git
+            <div class="w3-round w3-tiny skill_bar">
+                <div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div>
             </p>
 
             <p>Techincal Writing
                 <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;">Proficient</div></div>
+                    <div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div>
                 </div>
             </p>
 
@@ -151,6 +156,7 @@
                     <div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;">Proficient</div></div>
                 </div>
             </p>
+
         </div> 
     </div>
 </div>
