--- a/index.html
+++ b/index.html
@@ -6,32 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolios</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <ul>
+                <li><a href="#home" class="nav-link" data-page="home">Home</a></li>
                 <li><a href="#about" class="nav-link" data-page="about">About</a></li>
+                <li><a href="#skills" class="nav-link" data-page="skills">Skills</a></li>
                 <li><a href="#projects" class="nav-link" data-page="projects">Projects</a></li>
                 <li><a href="#resume" class="nav-link" data-page="resume">Resume</a></li>
-                <li><a href="#skills" class="nav-link" data-page="skills">Skills</a></li>
             </ul>
         </nav>
     </header>
 
     <main id="main-content">
-        <!-- About -->
-        <section id="about" class="tm-section-pad-top"></section>
+        <section id="home">
+            <!-- Content from home.html -->
+        </section><br><br><br>
 
-        <!-- Projects -->
-        <section id="projects" class="tm-section-pad-top"></section>
+        <section id="about">
+            <!-- Content from about.html -->
+        </section><br><br><br>
 
-        <!-- Resume -->
-        <section id="resume" class="tm-section-pad-top"></section>
+        <section id="skills">
+            <!-- Content from skills.html -->
+        </section><br><br><br>
 
-        <!-- Skills -->
-        <section id="skills" class="tm-section-pad-top"></section>
+        <section id="projects">
+            <!-- Content from projects.html -->
+        </section><br><br><br>
+
+        <section id="resume">
+            <!-- Content from resume.html -->
+        </section><br><br><br>
     </main>
 
     <footer>
