still needs work, but this is much better also goodnight

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
-<div class="container tm-container-gallery">
-    <div class="row">
-      <div class="col-12">
-        <h2 class="tm-text-primary tm-section-title mb-4 d-grey">About Me</h2>
-        <div class="mb-5 tm-underline-g">
-          <div class="tm-underline-inner-g"></div>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/css/ionicons.min.css">
+
+</head>
+
+<body>
+
+    <div class="container tm-container-gallery">
+        <!-- Header Section -->
+        <div class="row">
+            <div class="col-12">
+                <h1 class="tm-text-primary tm-section-title mb-4 d-grey">About Me</h1>
+                <div class="mb-5 tm-underline-g">
+                    <div class="tm-underline-inner-g"></div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-sm-12 col-md-5 text-center d-grey">
-          <p class="mb-0 w">
-            <a href="mailto:owe05@hotmail.no" target="_blank"><ion-icon name="mail-outline"></ion-icon></a>
-            <a href="https://github.com/owe005" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="https://www.linkedin.com/in/ole-kristian-westby-b3366b28a/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-          </p>
-      </div>
-      <div class="col-sm-12 col-md-7 d-grey">
-        <h2 class="tm-text-primary mb-4 d-grey">Ole Kristian Westby</h2>
-        <h2 class="tm-intro-text mb-4 d-grey">
-        <strong>Developer & Fisherman</strong><br>
-        I'm 22 years old, based in Bergen. Currently studying for a Bachelor in Cybersecurity while working part time for UNICEF Norway.
-        </h2>
+
+        <!-- Personal Details and Links Section -->
+        <div class="row">
+            <!-- Personal Bio Section -->
+            <div class="col-sm-12 col-md-7 d-grey">
+                <p>I'm 22 years old and based in Bergen. Currently, I'm pursuing a Bachelor's degree in Cybersecurity while working part-time for UNICEF Norway. What draws me to this field is its dynamic nature; new threats and vulnerabilities always emerging. This means there's always challenges to overcome and being on the side that safeguards information is incredibly rewarding. The idea of blending Datascience, A.I and Cybersecurity in a potential job or in projects excites me.</p>
+                <br><br>
+                <p>In my spare time I am either coding, climbing, playing video games or fishing. If you wonder, my favorite video game of all time is World of Warcraft, and that's simply because no other game is as rewarding.</p>
+                <br><br>
+                <p>As mentioned, I am currently working at UNICEF Norway, part time, employed as a Fundraiser. I have been with this organization for nearly 3 years in total now, and this job has been incredibly rewarding for me. Both because of all the positive work has been done, and because of all the priceless skills I have learnt over the years, with one in particular: <strong>excellent communication</strong>.</p>
+            </div>
+        </div>
     </div>
-    </div>
-  </div>
+</body>
+
+</html>
