--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,14 @@
 <div class="landing-page">
     <h1>Ole Kristian Westby</h1>
+    <div class="icons-container">
+        <a href="mailto:owe05@hotmail.no" target="_blank" title="Email Me" class="icon-link">
+            <ion-icon name="mail"></ion-icon>
+        </a>
+        <a href="https://github.com/owe005" target="_blank" title="Visit My GitHub Profile" class="icon-link">
+            <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a href="https://www.linkedin.com/in/ole-kristian-westby-b3366b28a/" target="_blank" title="Visit My LinkedIn Profile" class="icon-link">
+            <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+    </div>
 </div>
