--- a/pages/skills.html
+++ b/pages/skills.html
@@ -13,45 +13,33 @@
         <div class="col-sm-12 col-md-4" style="padding-bottom: 50px;">
             <h3 class="tm-text-primary mb-4 w">Languages</h3>
             <hr style="border-color: #d1d1d133;"> 
+
             <p>Python
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
             <p>Web (HTML,CSS,JS)
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;"></div>Expert</div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;"></div>Expert</div></div>
             </p>
             <p>MySQL
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;"></div>Proficient</div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;"></div>Proficient</div></div>
             </p>
             <p>Java
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;"></div>Proficient</div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;"></div>Proficient</div></div>
             </p>
             <p>C
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;"></div>Proficient</div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;"></div>Proficient</div></div>
             </p>
             <p>Haskell
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;"></div>Novice</div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;"></div>Novice</div></div>
             </p>
         </div>  
         <hr>
         <div class="col-sm-12 col-md-4" style="padding-bottom: 50px;">
             <h3 class="tm-text-primary mb-4 w">APIs</h3>
             <hr style="border-color: #d1d1d133;">
+
             <p>OpenAI
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
             
             <p>Discord
@@ -61,45 +49,31 @@
             </p>
 
             <p>Sklearn
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
 
             <p>Flask
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:80%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
 
             <p>Googletrans
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;">Proficient</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;">Proficient</div></div></div>
             </p>
 
             <p>Matplotlib
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;">Proficient</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;">Proficient</div></div></div>
             </p>
 
             <p>Pytesseract
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div></div>
             </p>
 
             <p>OpenCV
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;">Novice</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:35%;"><div style="padding-top: 1px;">Novice</div></div></div>
             </p>
 
             <p>Tensorflow
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:25%;"><div style="padding-top: 1px;">Novice</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:25%;"><div style="padding-top: 1px;">Novice</div></div></div>
             </p>
         </div>  
         <hr>
@@ -107,38 +81,27 @@
             <h3 class="tm-text-primary mb-4 w">Skills</h3>
             <hr style="border-color: #d1d1d133;">
             <p>Software Development
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>            
 
             <p>Communication
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
 
             <p>Cybersecurity
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
 
             <p>Datascience
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;">Proficient</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:70%;"><div style="padding-top: 1px;">Proficient</div></div></div>
             </p>
 
             <p>Data Visualization
-                <div class="w3-round w3-tiny skill_bar">
-                    <div data-inviewport="bar-fill" style="width:55%;"><div style="padding-top: 1px;">Proficient</div></div>
-                </div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:55%;"><div style="padding-top: 1px;">Proficient</div></div></div>
             </p>
 
             <p>Git
-            <div class="w3-round w3-tiny skill_bar">
-                <div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div>
+            <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div>
             </p>
             <hr>
         </div> 
