fixed resume buttons

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -8,13 +8,9 @@
         </div>            
     </div>
 
-    <div class="row" style="justify-content: right;">
-        <a href="../files/CV-OKW.pdf" class="resume_button" target="_blank">
-            <ion-icon name="document-attach-outline" style="padding: 0px 10px 0px 0px; vertical-align: middle;"></ion-icon>Download CV
-          </a>
-        <a href="../files/CV-OKWEnglish.pdf" class="resume_button" target="_blank">
-            <ion-icon name="document-attach-outline" style="padding: 0px 10px 0px 0px; vertical-align: middle;"></ion-icon>For English version
-        </a>
+    <div class="row">
+        <a href="../files/CV-OKW.pdf" class="resume_button" target="_blank">Download CV</a>
+        <a href="../files/CV-OKWEnglish.pdf" class="resume_button" target="_blank">For English version</a>
     </div>
 
     <br>
