navbar added two pages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <li><a href="#skills" class="nav-link" data-page="skills">Skills</a></li>
                 <li><a href="#projects" class="nav-link" data-page="projects">Projects</a></li>
                 <li><a href="#resume" class="nav-link" data-page="resume">Resume</a></li>
+                <li><a href="https://summarizer.olewestby.live">Summarizer</a></li>
+                <li><a href="https://spamdetector.olewestby.live">SpamDetector</a></li>
             </ul>
         </nav>
     </header>
