fixed the h5 for resume, gonna make it more mobile friendly so pushing now.

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -16,7 +16,7 @@
     <br>
 
     <div class="row">
-        <div class="col-sm-12 col-md-6 d-grey" style="padding-bottom: 50px;">
+        <div class="col-sm-12 col-md-6 d-grey resume-content" style="padding-bottom: 50px;">
             <h3 class="tm-text-primary mb-4 d-grey">Experience</h3>
             <hr>
             <p>
