--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
         <div class="row">
             <!-- Personal Bio Section -->
             <div class="col-sm-12 col-md-7 d-grey">
-                <p>I'm 22 years old and based in Bergen. Currently, I'm pursuing a Bachelor's degree in Cybersecurity while working part-time for UNICEF Norway. What draws me to this field is its dynamic nature; new threats and vulnerabilities always emerging. This means there's always challenges to overcome and being on the side that safeguards information is incredibly rewarding. The idea of blending Datascience, A.I and Cybersecurity in a potential job or in projects excites me.</p>
+                <p>I'm 23 years old and based in Bergen. Currently, I'm working full time in Eide Fjordbruk as an A.I Facilitator while pursuing a Bachelor's degree in Cybersecurity. What draws me to this field is its dynamic nature; new threats and vulnerabilities always emerging. This means there's always challenges to overcome and being on the side that safeguards information is incredibly rewarding. The idea of blending Datascience, A.I and Cybersecurity in a potential job or in projects excites me.</p>
                 <br><br>
                 <p>In my spare time I am either coding, climbing, playing video games or fishing. If you wonder, my favorite video game of all time is World of Warcraft, and that's simply because no other game is as rewarding.</p>
                 <br><br>
