--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,9 @@
                 <br><br>
                 <p>In my spare time I am either coding, climbing, playing video games or fishing. If you wonder, my favorite video game of all time is World of Warcraft, and that's simply because no other game is as rewarding.</p>
                 <br><br>
-                <p>As mentioned, I am currently working at UNICEF Norway, part time, employed as a Fundraiser. I have been with this organization for nearly 3 years in total now, and this job has been incredibly rewarding for me. Both because of all the positive work has been done, and because of all the priceless skills I have learnt over the years, with one in particular: <strong>excellent communication</strong>.</p>
+                <p>As mentioned, I am currently working at Eide Fjordbruk, employed as a AI Facilitator, but I do much more than that. I have been with this organization for nearly 5 months at the time of writing (April 2024), and this job has been an amazing learning opportunity and supplied me with first-hand experience with production and maintenance of code.</p>
+                <br><br>
+                <p>Scroll down and read more about my areas of expertise!</p>
             </div>
         </div>
     </div>
