--- a/pages/resume.html
+++ b/pages/resume.html
@@ -18,10 +18,25 @@
     <div class="row">
         <div class="col-sm-12 col-md-6 d-grey resume-content" style="padding-bottom: 50px;">
             <h3 class="tm-text-primary mb-4 d-grey">Experience</h3>
+            <p>
+                <h4>AI Facilitator</h4>
+                <h5>&emsp;Eide Family AS <i>(January 2024 -  PRESENT)</i></h5>
+                <span>
+                    <ul>
+                        <li>Started as an AI Facilitator for Eide (a fish farming company from Western Norway)</li>
+                        <li>Training employees with AI tools such as Microsoft Copilot, ChatGPT, DALLE 3</li>
+                        <li>Full Stack Developer for Eide Organic and Watermoon Vision</li>
+                        <li>Azure DevOps and Git manager for Eides IT devlopment</li>
+                        <li>Managed PowerApps and PowerAutomate to automate manual prosesses and collect information more effective</li>
+                        <li>Advised Eide on Cyber Security threats and challenges</li>
+                        <li>Primarily worked with technologies such as: Azure OpenAI, Python flask (+JS, HTML, CSS), Power Platform (Apps, Automate), Custom/Computer-Vision, Azure SearchAI, Azure KeyVault, Azure Web App Service, Azure CLI, Azure AI Services, +++</li>
+                    </ul>
+                </span>
+            </p>
             <hr>
             <p>
                 <h4>Fundraiser</h4>
-                <h5>&emsp;UNICEF Norway <i>(August 2023 - Current)</i></h5>
+                <h5>&emsp;UNICEF Norway <i>(August 2023 - January 2024)</i></h5>
                 <span>
                     <ul>
                         <li>Resumed as fundraiser once the temporary period was over</li>
@@ -83,7 +98,12 @@
             <p>
                 <h4>BSc, Cybersecurity</h4>
                 <span>&emsp;University of Bergen, <i>(August 2020 - Current)</i></span><br>
-                <span>&emsp;Grade Average: C</span>
+            </p>
+            <hr>
+            <p>
+                <h4>AI-900 Certification</h4>
+                <span>&emsp;Noroff School of Technology, <i>(March 2024 - April 2024)</i></span><br>
+                <span>&emsp;Finished with a score of 822/1000 points on the exam AI-900 and received the certification</span>
             </p>
             <hr>
             <p>
