--- a/pages/skills.html
+++ b/pages/skills.html
@@ -15,11 +15,14 @@
             <hr style="border-color: #d1d1d133;"> 
 
             <p>Python
-                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:95%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
             <p>Web (HTML,CSS,JS)
-                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;"></div>Expert</div></div>
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;"></div>Expert</div></div>
             </p>
+            <p>Azure DevOps / Git / Github
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;"></div>Expert</div></div>
+            </p
             <p>MySQL
                 <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:75%;"><div style="padding-top: 1px;"></div>Proficient</div></div>
             </p>
